# laboratory

./: .gitignore  README.md
custom-queue-latency/: .dockerignore  .gitignore  BENCHMARK.md  CMakeLists.txt  Dockerfile  PRE_LEARN.md  README.md
custom-queue-latency/src/: harness.cpp  harness.hpp  main.cpp  pipeline.cpp  pipeline.hpp  pipeline_main.cpp  queues.cpp  queues.hpp
custom-queue-latency/tests/: test_pipeline.cpp  test_queue_strategies.cpp  test_scenario.cpp
custom-queue-latency/tools/: run_phase4_matrix.py
db-tx-batch/: README.md  RESULT.md  RUNBOOK.md  docker-compose.yml  env.sh
db-tx-batch/experiments/00_setup/: capture_mysql_settings.sql  set_order.sql  set_queue.sql  settings.sql
db-tx-batch/experiments/10_queue_claim/: bad_a.sql  bad_b.sql  bench_queue_tables.sql  check.sql  check12.sql  good_a.sql  good_b.sql  reset_job1.sql  reset_job12.sql
db-tx-batch/experiments/20_agg_snapshot/: agg_range_demo_batch.sql  agg_range_demo_oltp.sql
db-tx-batch/experiments/30_lockbench/: bench_kv_deadlock_a.sql  bench_kv_deadlock_b.sql  bench_kv_lockwait_holder.sql  bench_kv_lockwait_waiter.sql  bench_tables.sql  grant_perf_schema.sql  ps_lock_waits_detail.sql  ps_report.sql
db-tx-batch/experiments/40_gaplock/: bench_gap_holder.sql  bench_gap_inserter.sql  bench_gap_seed.sql  bench_gap_tables.sql
db-tx-batch/experiments/50_chunk_demo/: bench_orders_tables.sql
db-tx-batch/experiments/60_undo_purge/: undo_report.sql
db-tx-batch/tools/: bootstrap_sequences.sql  run_agg_range_rc_rr_nodrop.sh  run_chunk_demo.sh  run_chunk_demo_bench.sh  run_gaplock_bench_nodrop.sh  run_isolation_lockbench_nodrop.sh  run_orders_range_sweep.sh  run_queue_claim_bench_nodrop.sh  run_undo_history_len_bench.sh  seed_orders_large.sh  seed_work_queue_large.sh  table_stats.sql
index_file/: BPlusTree.cpp  BPlusTree.h  InputParser.cpp  InputParser.h  Makefile  README.md  Types.h  b+tree.cpp
read_inmemory_data/: .gitignore  BLOG.md  README.md  RESULT.md  docker-compose.yml  env.sh  requirements.txt
read_inmemory_data/sql/: query_top20.sql  set_user_match.sql
read_inmemory_data/tools/: bench_user_match.py  run_benchmark_suite.py  run_buffer_pool_suite.py  seed_user_match.py
string-constant-pool/: RESULT.md  StringPoolGcExperiment.java
